// Vitest Snapshot v1

exports[`should render non-keyed loop 1`] = `
<root>
  <!--$$-->
  <span>
    <!--$-->
    1
    <!--/$-->
    - 
    <!--$-->
    0
  </span>
  <span>
    <!--$-->
    2
    <!--/$-->
    - 
    <!--$-->
    1
  </span>
  <span>
    <!--$-->
    3
    <!--/$-->
    - 
    <!--$-->
    2
  </span>
  <!--/$-->
</root>
`;

exports[`should render non-keyed loop 2`] = `
<root>
  <!--$$-->
  <span>
    <!--$-->
    2
    <!--/$-->
    - 
    <!--$-->
    0
  </span>
  <span>
    <!--$-->
    3
    <!--/$-->
    - 
    <!--$-->
    1
  </span>
  <span>
    <!--$-->
    4
    <!--/$-->
    - 
    <!--$-->
    2
  </span>
  <!--/$-->
</root>
`;

exports[`should render non-keyed loop 3`] = `
<root>
  <!--$$-->
  <span>
    <!--$-->
    2
    <!--/$-->
    - 
    <!--$-->
    0
  </span>
  <span>
    <!--$-->
    3
    <!--/$-->
    - 
    <!--$-->
    1
  </span>
  <!--/$-->
</root>
`;

exports[`should render non-keyed loop 4`] = `
<root>
  <!--$$-->
  <span>
    <!--$-->
    2
    <!--/$-->
    - 
    <!--$-->
    0
  </span>
  <span>
    <!--$-->
    3
    <!--/$-->
    - 
    <!--$-->
    1
  </span>
  <span>
    <!--$-->
    4
    <!--/$-->
    - 
    <!--$-->
    2
  </span>
  <span>
    <!--$-->
    5
    <!--/$-->
    - 
    <!--$-->
    3
  </span>
  <!--/$-->
</root>
`;

exports[`should render non-keyed loop 5`] = `
<root>
  <!--$$-->
  <span>
    <!--$-->
    3
    <!--/$-->
    - 
    <!--$-->
    0
  </span>
  <span>
    <!--$-->
    4
    <!--/$-->
    - 
    <!--$-->
    1
  </span>
  <span>
    <!--$-->
    5
    <!--/$-->
    - 
    <!--$-->
    2
  </span>
  <!--/$-->
</root>
`;

exports[`should render non-keyed loop 6`] = `
<root>
  <!--$$-->
  <!--/$-->
</root>
`;
